# AP-sachivalayam

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: config.py  dependencies.py  main.py
app/core/: exceptions.py  logging.py  rate_limiter.py  security.py  telugu.py
app/data/: scheme_faqs.json
app/models/: __init__.py  analytics.py  audit.py  employee_performance.py  form.py  grievance.py  interaction.py  knowledge.py  offline.py  scheme.py  task.py  user.py
app/schemas/: analytics.py  form.py  grievance.py  scheme.py  task.py  voice.py  whatsapp.py
app/services/: analytics_service.py  audit_service.py  conversation_engine.py  duplicate_detector.py  export_service.py  form_filler.py  grievance_service.py  gsws_bridge.py  knowledge_indexer.py  llm_service.py  notification_service.py  (+7 more)
docs/: FEATURES.md  GOOGLE_ACCELERATOR_APPLICATION.md  GOOGLE_APPLICATION_STEPS.md  LIVE_TEST_RESULTS.md  SUBMISSION_GUIDE.md  TESTING_WITH_REAL_DATA.md  pilot_playbook.md
knowledge_base/: chunker.py  embedder.py  ingest.py
scripts/: generate_embeddings.py  onboard_employees.py  scrape_schemes.py  seed_db.py
tests/: conftest.py  test_analytics.py  test_api_endpoints.py  test_conversation_engine.py  test_conversation_handlers.py  test_form_filler.py  test_grievance_service.py  test_gsws_bridge.py  test_offline_queue.py  test_pdf_generator.py  test_scheme_advisor.py  test_security.py  test_service_integration.py  test_task_service.py  test_telugu.py  test_voice_pipeline.py  test_whatsapp.py
(+57 files in other folders)
